...
                android:layout_marginStart="8dp" android:id="@+id/user_type_rg"
                out_constraintHorizontal_bias="1.0"
                android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent">
            <RadioButton
                    android:text="traveller"
                    android:layout_width="85dp"
                    android:layout_height="50dp" android:id="@+id/traveller_rb" android:layout_weight="1"/>
            <RadioButton
                    android:text="driver"
                    android:layout_width="85dp"
                    android:layout_height="50dp" android:id="@+id/driver_rb" android:layout_weight="1"/>

        </RadioGroup>

        <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
...
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline10"
                android:id="@+id/textInputLayout5" app:layout_constraintBottom_toTopOf="@+id/textInputLayout6">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/u_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

...
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
                android:id="@+id/textInputLayout6" android:layout_marginBottom="9dp"
                app:layout_constraintBottom_toTopOf="@+id/password_text_input">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_no_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

...
                app:layout_constraintEnd_toStartOf="@+id/guideline9" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/confirm_password_text_input">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
...
                android:hint="confirm password"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/password_text_input"
                app:layout_constraintEnd_toStartOf="@+id/guideline9" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:layout_marginStart="8dp" android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/submit_btn">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_p_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
...
                android:text="Submit"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline11" app:layout_constraintEnd_toStartOf="@+id/guideline9"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/back_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="back"
                android:textSize="20dp"
...
