<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            tools:context=".UserRegistration">


        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="fill info"
                android:textColor="@android:color/holo_blue_dark"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:layout_marginTop="50dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:id="@+id/place_bid_text_view"
                android:layout_marginBottom="30dp" app:layout_constraintBottom_toTopOf="@+id/textView13"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="License No"
                app:layout_constraintEnd_toStartOf="@+id/guideline9" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline10"
                android:id="@+id/textInputLayout5" app:layout_constraintBottom_toTopOf="@+id/textInputLayout6">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/license_no_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="CAR VIN"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
                android:id="@+id/textInputLayout6" android:layout_marginBottom="9dp"
                app:layout_constraintBottom_toTopOf="@+id/password_text_input">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_vin_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Side No"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
                app:layout_constraintEnd_toStartOf="@+id/guideline9" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/confirm_password_text_input">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/car_side_no_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_text_input"
                android:layout_width="312dp"
                android:layout_height="54dp"
                android:hint="Seat No"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/password_text_input"
                app:layout_constraintEnd_toStartOf="@+id/guideline9" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:layout_marginStart="8dp" android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/submit_btn">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/seat_no_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Account_text_input"
                android:layout_width="312dp"
                android:layout_height="54dp"
                android:hint="Account No"
                app:layout_constraintEnd_toStartOf="@+id/guideline9" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:layout_marginStart="8dp" android:layout_marginBottom="25dp"
                app:layout_constraintBottom_toTopOf="@+id/submit_btn"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_text_input" android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/acc_no_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/add_info_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:text="Add info"
                android:layout_marginTop="63dp"
                app:layout_constraintTop_toBottomOf="@+id/Account_text_input"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="151dp"
                android:layout_marginBottom="225dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="172dp"/>




        <TextView
                android:id="@+id/register_confirmation_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:textColor="@android:color/holo_green_dark"
                android:textAllCaps="true"
                android:textSize="15sp" />
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="40dp" android:id="@+id/guideline5"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_end="40dp" android:id="@+id/guideline9"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="77dp"
                android:id="@+id/guideline10" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="411dp" app:layout_constraintEnd_toEndOf="parent"
        />
        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="447dp"
                android:id="@+id/guideline11"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>