<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ConfirmBackAccount">
        android:background="#fff">


        <TextView
                android:layout_width="312dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:text="confirm your account"
                android:id="@+id/confirm_account_tv"
                android:textColor="@android:color/holo_blue_dark"
                android:textAllCaps="true"
                android:textSize="20dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline4"
                android:layout_marginTop="52dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textInputLayout"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Acc No" android:id="@+id/textInputLayout"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline4" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline7">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/acc_conf_no_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:hint="account password"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@+id/guideline6" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="@+id/guideline4"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/acc_password_et"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/acc_confirm_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:text="Confirm"
                app:layout_constraintTop_toTopOf="@+id/guideline8" app:layout_constraintEnd_toStartOf="@+id/guideline6"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="150dp" app:layout_constraintHorizontal_bias="0.0"/>



        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="40dp" android:id="@+id/guideline4"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_end="40dp" android:id="@+id/guideline6"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="180dp" android:id="@+id/guideline7"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="359dp" android:id="@+id/guideline8"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>